<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_account_circle_24dp"
            android:title="@string/drawer_about" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_poll_24dp"
            android:title="@string/drawer_bmi" />
        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/ic_event_note_24dp"
            android:title="@string/drawer_daily" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_more_24dp"
            android:title="@string/drawer_quiz" />
    </group>

    <item android:title="@string/drawer_title">
        <menu>
            <item
                android:id="@+id/nav_centers"
                android:icon="@drawable/ic_pin_drop_24dp"
                android:title="@string/drawer_centers" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_send" />
        </menu>
    </item>

</menu>
