<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ymksun.android.fivedailyworkouts.AddDailyActivity"
    tools:showIn="@layout/activity_add_daily">

    <TextView
        android:id="@+id/add_daily_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="sample"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/choose_workout"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <CheckBox
        android:id="@+id/workout_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_one"/>

    <CheckBox
        android:id="@+id/workout_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_two"/>

    <CheckBox
        android:id="@+id/workout_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_three"/>

    <CheckBox
        android:id="@+id/workout_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_four"/>

    <CheckBox
        android:id="@+id/workout_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_five"/>


    <Button
        android:id="@+id/daily_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:padding="16dp"
        android:layout_marginTop="48dp"/>

</LinearLayout>
