<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ymksun.android.fivedailyworkouts.BMIActivity"
    tools:showIn="@layout/activity_bmi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorWhite">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/bday"
                    android:layout_marginLeft="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/bmi_age_txt"
                        android:layout_width="150dp"
                        android:numeric="decimal"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <RadioGroup
                    android:id="@+id/bmi_gender"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/bmi_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/male"
                        android:text="@string/male"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/bmi_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/female"
                        android:text="@string/female"
                        android:layout_marginLeft="20dp"/>

                </RadioGroup>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_common_weight_black"
                    android:layout_marginLeft="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/bmi_weight_txt"
                        android:layout_height="wrap_content"
                        android:layout_width="130dp"
                        android:numeric="decimal"
                        android:paddingLeft="5dp"/>

                </LinearLayout>


                <Spinner
                    android:id="@+id/spin_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_common_height_black"
                    android:layout_marginLeft="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/bmi_height_txt"
                        android:layout_height="wrap_content"
                        android:layout_width="130dp"
                        android:numeric="decimal"
                        android:paddingLeft="5dp"/>

                </LinearLayout>

                <Spinner
                    android:id="@+id/spin_height"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bmi_ans_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:layout_marginLeft="16dp"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/bmr_ans_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmr"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bmi_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:layout_gravity="center"
            android:text="@string/calculate"
            android:textColor="@color/colorWhite"
            android:layout_margin="16dp"
            android:padding="16dp"/>

    </LinearLayout>

</ScrollView>
